// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast gets geometry quad symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 0,
      "flags": 0,
      "identifiers": Array [],
      "symbols": Array [
        "QUAD",
      ],
      "variable": Object {
        "locals": Array [
          Object {
            "expr": "ivec2(0, 0)",
            "name": "QUAD",
          },
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [
            "const",
          ],
        },
      },
    },
    Object {
      "at": 102,
      "flags": 1,
      "func": Object {
        "name": "getQuadIndex",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "ivec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "QUAD",
      ],
      "symbols": Array [
        "getQuadIndex",
      ],
    },
    Object {
      "at": 176,
      "flags": 1,
      "func": Object {
        "name": "getQuadUV",
        "parameters": Array [
          "int",
          "vertex",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getQuadIndex",
      ],
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "hash": "vz5280ybh9",
  "modules": undefined,
  "symbols": Array [
    "QUAD",
    "getQuadIndex",
    "getQuadUV",
  ],
  "visibles": Array [
    "getQuadIndex",
    "getQuadUV",
  ],
}
`;

exports[`ast gets quad vertex declarations 1`] = `
Array [
  Object {
    "at": 175,
    "flags": 0,
    "func": Object {
      "name": "getPosition",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getPosition",
    ],
  },
  Object {
    "at": 198,
    "flags": 0,
    "func": Object {
      "name": "getColor",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getColor",
    ],
  },
  Object {
    "at": 218,
    "flags": 0,
    "func": Object {
      "name": "getSize",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getSize",
    ],
  },
  Object {
    "at": 237,
    "flags": 0,
    "func": Object {
      "name": "getDepth",
      "parameters": Array [
        "int",
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getDepth",
    ],
  },
]
`;

exports[`ast gets quad vertex functions 1`] = `
Array [
  Object {
    "at": 274,
    "flags": 1,
    "func": Object {
      "name": "getQuadVertex",
      "parameters": Array [
        "int",
        "vertexIndex",
      ],
      "type": Object {
        "name": "SolidVertex",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [
      "position",
      "getPosition",
      "instanceIndex",
      "color",
      "getColor",
      "size",
      "getSize",
      "depth",
      "getDepth",
      "center",
      "worldToClip",
      "uv",
      "getQuadUV",
      "vertexIndex",
      "xy",
      "pixelScale",
      "getPerspectiveScale",
      "viewUniforms",
      "SolidVertex",
    ],
    "symbols": Array [
      "getQuadVertex",
    ],
  },
]
`;

exports[`ast gets quad vertex imports 1`] = `
Array [
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "SolidVertex",
        "name": "SolidVertex",
      },
    ],
    "name": "use/types",
    "symbols": Array [
      "SolidVertex",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "viewUniforms",
        "name": "viewUniforms",
      },
      Object {
        "imported": "worldToClip",
        "name": "worldToClip",
      },
      Object {
        "imported": "getPerspectiveScale",
        "name": "getPerspectiveScale",
      },
    ],
    "name": "use/view",
    "symbols": Array [
      "viewUniforms",
      "worldToClip",
      "getPerspectiveScale",
    ],
  },
  Object {
    "at": 0,
    "imports": Array [
      Object {
        "imported": "getQuadUV",
        "name": "getQuadUV",
      },
    ],
    "name": "geometry/quad",
    "symbols": Array [
      "getQuadUV",
    ],
  },
]
`;

exports[`ast gets quad vertex symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 175,
      "flags": 0,
      "func": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "at": 198,
      "flags": 0,
      "func": Object {
        "name": "getColor",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getColor",
      ],
    },
    Object {
      "at": 218,
      "flags": 0,
      "func": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "at": 237,
      "flags": 0,
      "func": Object {
        "name": "getDepth",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getDepth",
      ],
    },
    Object {
      "at": 274,
      "flags": 1,
      "func": Object {
        "name": "getQuadVertex",
        "parameters": Array [
          "int",
          "vertexIndex",
        ],
        "type": Object {
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "getPosition",
        "getColor",
        "getSize",
        "getDepth",
      ],
      "symbols": Array [
        "getQuadVertex",
      ],
    },
  ],
  "externals": Array [
    Object {
      "at": 175,
      "flags": 0,
      "func": Object {
        "name": "getPosition",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getPosition",
      ],
    },
    Object {
      "at": 198,
      "flags": 0,
      "func": Object {
        "name": "getColor",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getColor",
      ],
    },
    Object {
      "at": 218,
      "flags": 0,
      "func": Object {
        "name": "getSize",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "vec2",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getSize",
      ],
    },
    Object {
      "at": 237,
      "flags": 0,
      "func": Object {
        "name": "getDepth",
        "parameters": Array [
          "int",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [],
      "symbols": Array [
        "getDepth",
      ],
    },
  ],
  "globals": undefined,
  "hash": "4ty31mhjri",
  "modules": Array [
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "SolidVertex",
          "name": "SolidVertex",
        },
      ],
      "name": "use/types",
      "symbols": Array [
        "SolidVertex",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "viewUniforms",
          "name": "viewUniforms",
        },
        Object {
          "imported": "worldToClip",
          "name": "worldToClip",
        },
        Object {
          "imported": "getPerspectiveScale",
          "name": "getPerspectiveScale",
        },
      ],
      "name": "use/view",
      "symbols": Array [
        "viewUniforms",
        "worldToClip",
        "getPerspectiveScale",
      ],
    },
    Object {
      "at": 0,
      "imports": Array [
        Object {
          "imported": "getQuadUV",
          "name": "getQuadUV",
        },
      ],
      "name": "geometry/quad",
      "symbols": Array [
        "getQuadUV",
      ],
    },
  ],
  "symbols": Array [
    "getPosition",
    "getColor",
    "getSize",
    "getDepth",
    "getQuadVertex",
  ],
  "visibles": Array [
    "getQuadVertex",
  ],
}
`;

exports[`ast gets shake information for geometry/quad AST 1`] = `
Array [
  Array [
    0,
    Array [
      "QUAD",
      "getQuadIndex",
      "getQuadUV",
    ],
  ],
  Array [
    102,
    Array [
      "getQuadIndex",
      "getQuadUV",
    ],
  ],
  Array [
    176,
    Array [
      "getQuadUV",
    ],
  ],
]
`;

exports[`ast gets shake information for instance/vertex/quad AST 1`] = `
Array [
  Array [
    175,
    Array [
      "getPosition",
      "getQuadVertex",
    ],
  ],
  Array [
    198,
    Array [
      "getColor",
      "getQuadVertex",
    ],
  ],
  Array [
    218,
    Array [
      "getSize",
      "getQuadVertex",
    ],
  ],
  Array [
    237,
    Array [
      "getDepth",
      "getQuadVertex",
    ],
  ],
  Array [
    274,
    Array [
      "getQuadVertex",
    ],
  ],
]
`;

exports[`ast gets shake information for use/types AST 1`] = `
Array [
  Array [
    15,
    Array [
      "SolidVertex",
    ],
  ],
  Array [
    97,
    Array [
      "MeshVertex",
    ],
  ],
]
`;

exports[`ast gets solid fragment declarations 1`] = `
Array [
  Object {
    "at": 54,
    "flags": 0,
    "func": Object {
      "name": "getFragment",
      "parameters": Array [
        "vec4",
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [],
      },
    },
    "identifiers": Array [],
    "symbols": Array [
      "getFragment",
    ],
  },
  Object {
    "at": 103,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragIndex",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragIndex",
        },
      ],
      "type": Object {
        "name": "uint",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
          "flat",
        ],
      },
    },
  },
  Object {
    "at": 148,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "uvec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
  Object {
    "at": 195,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "in",
        ],
      },
    },
  },
  Object {
    "at": 235,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "fragUV",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "fragUV",
        },
      ],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
  Object {
    "at": 273,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "outColor",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "outColor",
        },
      ],
      "type": Object {
        "name": "vec4",
        "qualifiers": Array [
          "layout(location = 0)",
          "out",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "x",
      "y",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": null,
          "name": "x",
        },
        Object {
          "expr": null,
          "name": "y",
        },
      ],
      "type": Object {
        "name": "float",
        "qualifiers": Array [],
      },
    },
  },
  Object {
    "at": 25,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "a",
      "b",
      "c",
      "d",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "3",
          "name": "a",
        },
        Object {
          "expr": "1",
          "name": "b",
        },
        Object {
          "expr": null,
          "name": "c",
        },
        Object {
          "expr": null,
          "name": "d",
        },
      ],
      "type": Object {
        "name": "int",
        "qualifiers": Array [],
      },
    },
  },
]
`;

exports[`ast gets test declarations with array 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "QUAD",
    ],
    "variable": Object {
      "locals": Array [
        Object {
          "expr": "ivec2(0, 0)",
          "name": "QUAD",
        },
      ],
      "type": Object {
        "name": "ivec2",
        "qualifiers": Array [
          "const",
        ],
      },
    },
  },
]
`;

exports[`ast gets test declarations with qualified declaration 1`] = `
Array [
  Object {
    "at": 7,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [
      "unknown",
    ],
  },
  Object {
    "at": 42,
    "flags": 0,
    "identifiers": Array [],
    "symbols": Array [],
    "variable": Object {
      "locals": Array [],
      "type": Object {
        "name": "vec2",
        "qualifiers": Array [
          "layout(location = 1)",
          "in",
        ],
      },
    },
  },
]
`;

exports[`ast gets use types symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": Array [],
      "symbols": Array [
        "SolidVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "SolidVertex",
          "qualifiers": Array [],
        },
      },
    },
    Object {
      "at": 97,
      "flags": 1,
      "identifiers": Array [],
      "symbols": Array [
        "MeshVertex",
      ],
      "variable": Object {
        "locals": Array [],
        "type": Object {
          "members": Array [
            Object {
              "name": "position",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "normal",
              "type": Object {
                "name": "vec3",
              },
            },
            Object {
              "name": "color",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "uv",
              "type": Object {
                "name": "vec2",
              },
            },
          ],
          "name": "MeshVertex",
          "qualifiers": Array [],
        },
      },
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "hash": "3wmin9gcu9",
  "modules": undefined,
  "symbols": Array [
    "SolidVertex",
    "MeshVertex",
  ],
  "visibles": Array [
    "SolidVertex",
    "MeshVertex",
  ],
}
`;

exports[`ast gets use view declarations 1`] = `
Array [
  Object {
    "at": 15,
    "flags": 1,
    "identifiers": Array [
      "VIEW_BINDGROUP",
      "VIEW_BINDING",
      "projectionMatrix",
      "viewMatrix",
      "viewPosition",
      "viewResolution",
      "viewSize",
      "viewWorldUnit",
      "viewPixelRatio",
    ],
    "struct": Object {
      "name": "viewUniforms",
      "struct": Object {
        "members": Array [
          Object {
            "name": "projectionMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewMatrix",
            "type": Object {
              "name": "mat4",
            },
          },
          Object {
            "name": "viewPosition",
            "type": Object {
              "name": "vec4",
            },
          },
          Object {
            "name": "viewResolution",
            "type": Object {
              "name": "vec2",
            },
          },
          Object {
            "name": "viewSize",
            "type": Object {
              "name": "vec2",
            },
          },
          Object {
            "name": "viewWorldUnit",
            "type": Object {
              "name": "float",
            },
          },
          Object {
            "name": "viewPixelRatio",
            "type": Object {
              "name": "float",
            },
          },
        ],
      },
      "type": Object {
        "name": "ViewUniforms",
        "qualifiers": Array [
          "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
          "uniform",
        ],
      },
    },
    "symbols": Array [
      "viewUniforms",
      "ViewUniforms",
    ],
  },
]
`;

exports[`ast gets use view symbol table 1`] = `
Object {
  "declarations": Array [
    Object {
      "at": 15,
      "flags": 1,
      "identifiers": Array [],
      "struct": Object {
        "name": "viewUniforms",
        "struct": Object {
          "members": Array [
            Object {
              "name": "projectionMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewMatrix",
              "type": Object {
                "name": "mat4",
              },
            },
            Object {
              "name": "viewPosition",
              "type": Object {
                "name": "vec4",
              },
            },
            Object {
              "name": "viewResolution",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewSize",
              "type": Object {
                "name": "vec2",
              },
            },
            Object {
              "name": "viewWorldUnit",
              "type": Object {
                "name": "float",
              },
            },
            Object {
              "name": "viewPixelRatio",
              "type": Object {
                "name": "float",
              },
            },
          ],
        },
        "type": Object {
          "name": "ViewUniforms",
          "qualifiers": Array [
            "layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING)",
            "uniform",
          ],
        },
      },
      "symbols": Array [
        "viewUniforms",
        "ViewUniforms",
      ],
    },
    Object {
      "at": 275,
      "flags": 1,
      "func": Object {
        "name": "worldToView",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "worldToView",
      ],
    },
    Object {
      "at": 372,
      "flags": 1,
      "func": Object {
        "name": "viewToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "viewToClip",
      ],
    },
    Object {
      "at": 474,
      "flags": 1,
      "func": Object {
        "name": "worldToClip",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec4",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip",
      ],
    },
    Object {
      "at": 570,
      "flags": 1,
      "func": Object {
        "name": "clipToScreen3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "clipToScreen3D",
      ],
    },
    Object {
      "at": 689,
      "flags": 1,
      "func": Object {
        "name": "screenToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "screenToClip3D",
      ],
    },
    Object {
      "at": 814,
      "flags": 1,
      "func": Object {
        "name": "worldToClip3D",
        "parameters": Array [
          "vec4",
          "position",
        ],
        "type": Object {
          "name": "vec3",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewToClip",
        "worldToView",
      ],
      "symbols": Array [
        "worldToClip3D",
      ],
    },
    Object {
      "at": 952,
      "flags": 1,
      "func": Object {
        "name": "getPerspectiveScale",
        "parameters": Array [
          "float",
          "w",
        ],
        "type": Object {
          "name": "float",
          "qualifiers": Array [],
        },
      },
      "identifiers": Array [
        "viewUniforms",
      ],
      "symbols": Array [
        "getPerspectiveScale",
      ],
    },
  ],
  "externals": undefined,
  "globals": undefined,
  "hash": "q3u45dtwd2",
  "modules": undefined,
  "symbols": Array [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
  "visibles": Array [
    "viewUniforms",
    "ViewUniforms",
    "worldToView",
    "viewToClip",
    "worldToClip",
    "clipToScreen3D",
    "screenToClip3D",
    "worldToClip3D",
    "getPerspectiveScale",
  ],
}
`;

exports[`ast rewrites a lot of code using the compressed AST 1`] = `
Array [
  Array [
    "Skip",
    1,
    46,
  ],
  Array [
    "Shake",
    48,
    80,
  ],
  Array [
    "Id",
    48,
    59,
  ],
  Array [
    "Id",
    60,
    69,
  ],
  Array [
    "Shake",
    100,
    145,
  ],
  Array [
    "Id",
    107,
    115,
  ],
  Array [
    "Id",
    135,
    144,
  ],
  Array [
    "Shake",
    152,
    192,
  ],
  Array [
    "Id",
    159,
    167,
  ],
  Array [
    "Id",
    182,
    191,
  ],
  Array [
    "Shake",
    193,
    230,
  ],
  Array [
    "Id",
    200,
    208,
  ],
  Array [
    "Id",
    223,
    229,
  ],
  Array [
    "Shake",
    239,
    523,
  ],
  Array [
    "Id",
    244,
    248,
  ],
  Array [
    "Id",
    259,
    270,
  ],
  Array [
    "Id",
    273,
    287,
  ],
  Array [
    "Id",
    295,
    308,
  ],
  Array [
    "Id",
    311,
    327,
  ],
  Array [
    "Id",
    332,
    343,
  ],
  Array [
    "Id",
    344,
    345,
  ],
  Array [
    "Id",
    348,
    357,
  ],
  Array [
    "Id",
    358,
    369,
  ],
  Array [
    "Id",
    371,
    384,
  ],
  Array [
    "Id",
    390,
    401,
  ],
  Array [
    "Id",
    404,
    405,
  ],
  Array [
    "Id",
    436,
    445,
  ],
  Array [
    "Id",
    453,
    466,
  ],
  Array [
    "Id",
    477,
    486,
  ],
  Array [
    "Id",
    489,
    490,
  ],
  Array [
    "Id",
    500,
    506,
  ],
  Array [
    "Id",
    509,
    510,
  ],
]
`;

exports[`ast rewrites a lot of code using the compressed AST 2`] = `
Object {
  "__nodes": [Function],
  "cursor": [Function],
}
`;

exports[`ast rewrites code using the AST 1`] = `
"
    float _zz_getValue(int index);
    void entryPoint() {
      float x = 3.0;
      float y = _zz_getValue(2);
    }
    "
`;

exports[`ast rewrites code using the compressed AST 1`] = `
Array [
  Array [
    "Shake",
    5,
    31,
  ],
  Array [
    "Id",
    11,
    19,
  ],
  Array [
    "Id",
    24,
    29,
  ],
  Array [
    "Shake",
    36,
    132,
  ],
  Array [
    "Id",
    41,
    45,
  ],
  Array [
    "Id",
    62,
    63,
  ],
  Array [
    "Id",
    83,
    84,
  ],
  Array [
    "Id",
    87,
    95,
  ],
  Array [
    "Id",
    111,
    112,
  ],
  Array [
    "Id",
    120,
    121,
  ],
]
`;

exports[`ast rewrites code using the compressed AST 2`] = `
Object {
  "__nodes": [Function],
  "cursor": [Function],
}
`;

exports[`ast shakes simple program 1`] = `
Array [
  Array [
    1,
    Array [
      "x",
      "getA",
      "getB",
    ],
  ],
  Array [
    38,
    Array [
      "getA",
    ],
  ],
  Array [
    83,
    Array [
      "getB",
    ],
  ],
]
`;

exports[`ast shakes simple program 2`] = `
"
const float x = 1.0;

float getA() {
  return x;
}

"
`;

exports[`ast shakes use/view AST 1`] = `
Array [
  Array [
    15,
    Array [
      "viewUniforms",
      "worldToView",
      "worldToClip",
      "worldToClip3D",
      "viewToClip",
      "clipToScreen3D",
      "screenToClip3D",
      "getPerspectiveScale",
      "ViewUniforms",
    ],
  ],
  Array [
    275,
    Array [
      "worldToView",
      "worldToClip",
      "worldToClip3D",
    ],
  ],
  Array [
    372,
    Array [
      "viewToClip",
      "worldToClip",
      "worldToClip3D",
    ],
  ],
  Array [
    474,
    Array [
      "worldToClip",
    ],
  ],
  Array [
    570,
    Array [
      "clipToScreen3D",
    ],
  ],
  Array [
    689,
    Array [
      "screenToClip3D",
    ],
  ],
  Array [
    814,
    Array [
      "worldToClip3D",
    ],
  ],
  Array [
    952,
    Array [
      "getPerspectiveScale",
    ],
  ],
]
`;

exports[`ast shakes use/view AST 2`] = `
"layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING) uniform ViewUniforms {
  mat4 projectionMatrix;
  mat4 viewMatrix;
  vec4 viewPosition;
  vec2 viewResolution;
  vec2 viewSize;
  float viewWorldUnit;
  float viewPixelRatio;
} viewUniforms;

vec4 worldToView(vec4 position) {
  return viewUniforms.viewMatrix * position;
}

vec4 viewToClip(vec4 position) {
  return viewUniforms.projectionMatrix * position;
}

vec4 worldToClip(vec4 position) {
  return viewToClip(worldToView(position));
}

"
`;

exports[`ast shakes use/view AST using compressed AST 1`] = `
Array [
  Array [
    15,
    Array [
      "viewUniforms",
      "worldToView",
      "worldToClip",
      "worldToClip3D",
      "viewToClip",
      "clipToScreen3D",
      "screenToClip3D",
      "getPerspectiveScale",
      "ViewUniforms",
    ],
  ],
  Array [
    275,
    Array [
      "worldToView",
      "worldToClip",
      "worldToClip3D",
    ],
  ],
  Array [
    372,
    Array [
      "viewToClip",
      "worldToClip",
      "worldToClip3D",
    ],
  ],
  Array [
    474,
    Array [
      "worldToClip",
    ],
  ],
  Array [
    570,
    Array [
      "clipToScreen3D",
    ],
  ],
  Array [
    689,
    Array [
      "screenToClip3D",
    ],
  ],
  Array [
    814,
    Array [
      "worldToClip3D",
    ],
  ],
  Array [
    952,
    Array [
      "getPerspectiveScale",
    ],
  ],
]
`;
